syntax = "proto3";

package stock;

option go_package = "base/internal/api/stock";

service StockService {
    rpc SaveProduct(SaveProductRequest) returns (SaveProductResponse);
    rpc IncreaseProductQuantity(IncreaseProductQuantityRequest)
        returns (IncreaseProductQuantityResponse);
    rpc GetProductInfo(GetProductInfoRequest) returns (GetProductInfoResponse);
}

message Product {
    int64 id = 1;
    string name = 2;
    int64 price = 3;
    int64 quantity = 4;
}

message SaveProductRequest {
    string token = 1;
    string product_name = 2;
    int64 product_price = 3;
}

message SaveProductResponse { Product product = 1; }

message IncreaseProductQuantityRequest {
    string token = 1;
    int64 product_id = 2;
    int64 quantity_delta = 3;
}

message IncreaseProductQuantityResponse { Product product = 1; }

message GetProductInfoRequest {
    string token = 1;
    int64 product_id = 2;
}

message GetProductInfoResponse { Product product = 1; }
